# smp

./: .rsync-exclude  README.md  pyproject.toml
datasets/: norm_stats.npz
docs/: object_goal_mjlab_integration.md  object_goal_smp.md  object_goal_smp_reward_implementation_summary.md
scripts/: check_object_goal_asset_context.py  check_object_goal_task_step.py  csv_to_npz.py  generate_viz.py  pretrain.py  smoke_object_goal_env_reward.py  smoke_object_goal_smp_reward.py
src/smp/pretrain/: dataset.py  model.py  pretrain_cfg.py  scheduler.py
src/smp/rl/: env_cfg.py  events.py  object_goal_assets.py  object_goal_events.py  object_goal_features.py  object_goal_prior.py  object_goal_rewards.py  rewards.py  rl_cfg.py  utils.py
src/smp/rl/tasks/: __init__.py
src/smp/rl/tasks/getup/: __init__.py  getup_env_cfg.py
src/smp/rl/tasks/getup/mdp/: __init__.py  events.py  rewards.py  terminations.py
src/smp/rl/tasks/location/: __init__.py  location_env_cfg.py
src/smp/rl/tasks/location/mdp/: __init__.py  commands.py  rewards.py
src/smp/rl/tasks/object_goal/: __init__.py  object_goal_env_cfg.py
src/smp/rl/tasks/object_goal/mdp/: __init__.py  observations.py  rewards.py
src/smp/rl/tasks/steering/: __init__.py  forward_env_cfg.py  steering_env_cfg.py
src/smp/rl/tasks/steering/mdp/: __init__.py  commands.py  rewards.py
src/smp/sampling/: feature_to_state.py
