[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "smp"
version = "0.1.0"
description = "Score-Matching Motion Priors for humanoid motion tracking."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "mjlab",
  "torch<2.11.0",
  "numpy>=1.26",
  "matplotlib>=3.9",
  "wandb>=0.19",
  "tyro>=0.9",
  "scikit-learn>=1.6",
]

[dependency-groups]
dev = [
  "ruff>=0.14.14",
]

[tool.uv]
override-dependencies = ["mujoco==3.7.0.*"]

[tool.uv.sources]
mjlab = { git = "https://github.com/mujocolab/mjlab.git", rev = "33fc155" }
mujoco = { index = "mujoco" }

[[tool.uv.index]]
name = "mujoco"
url = "https://py.mujoco.org/"
explicit = true


[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[tool.ruff]
src = ["src", "scripts"]
indent-width = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]
